# realstate

./: .env.production.example  .gitignore  .~lock.Ayat_Share_Company_Aggregated_Sales_Strategy.docx#  Ayat_Share_Company_Aggregated_Sales_Strategy.docx  README.md  docker-compose.prod.ip.yml  docker-compose.prod.yml  docker-compose.yml  photo_2026-05-12_15-59-45.docx
backend/: .dockerignore  .env.example  .env.production.example  Dockerfile  Dockerfile.prod  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1a2b3c4d5e6f_add_home_page_cards.py  2b4c8d9e1f0a_add_calculator_config_to_pricing_versions.py  3c8f1a2b9d0e_add_listing_metadata.py  7f3e9b6c1a2d_add_location_content_tables.py  905078751efe_initial_schema.py  c4f8a2b91d3e_seed_default_roles.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  rate_limit.py  security.py
backend/app/data/: __init__.py  ayat_official_loader.py  listing_card_image.py  temer_listing_metadata.py
backend/app/models/: __init__.py  analytics.py  commission.py  company.py  identity.py  inventory.py  leads_contracts.py  payment.py  pricing.py
backend/app/schemas/: auth.py  commission.py  inventory.py  leads.py  payment.py  (+2 more)
backend/belay_properties_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
backend/data/: ayat_official_2018.json  ayat_production.json  temer_production.json  temer_scraped.json
backend/tests/: conftest.py  test_auth.py  test_health.py  test_inventory_api.py  test_phases_7_9.py  test_pricing_api.py
(+143 files in other folders)
