[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "belay-properties-backend"
version = "0.1.0"
description = "FastAPI backend for Belay Properties"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.17.0",
  "bcrypt>=4.2.0",
  "email-validator>=2.2.0",
  "fastapi>=0.120.0",
  "pydantic-settings>=2.11.0",
  "psycopg[binary]>=3.2.0",
  "python-jose[cryptography]>=3.3.0",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.38.0",
]

[project.scripts]
belay-create-admin = "app.scripts.create_admin:main"
belay-seed-demo = "app.scripts.seed_demo_data:main"

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.0.0",
  "ruff>=0.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501", "I001"]
"alembic/env.py" = ["I001"]
"app/models/**/*.py" = ["F821", "UP037"]
